fix message overwrap problem

--- a/assets/stylesheets/components/_message_container.scss
+++ b/assets/stylesheets/components/_message_container.scss
@@ -21,7 +21,7 @@
   overflow-y: scroll;
 }
 
-.message {
+.sending-message {
   height: 10%;
 }
 
@@ -44,4 +44,5 @@
   justify-content: space-between;
   color: green;
   font-weight: bold;
+  height: 20px;
 }
